[workspace]
members = [
    "rig-core",
    "rig-mobile",
    "rig-deepseek",
    "rig-qdrant",
    "rig-sqlite",
    "rig-neo4j",
    "rig-mongodb",
    "rig-lancedb",
    "rig-broker",
    "rig-registry",
    "rig-gateway"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
