[package]
name = "meap-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
ring = { workspace = true }
rand = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
