[package]
name = "rig-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
rig-registry = { path = "../rig-registry" }
rig-broker = { path = "../rig-broker" } 