[package]
name = "meap-lancedb"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
meap-core = { path = "../rig-core" }
lancedb = "0.4"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true } 