[package]
name = "meap-neo4j"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
meap-core = { path = "../rig-core" }
neo4rs = "0.7"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true } 