[package]
name = "meap-sqlite"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
meap-core = { path = "../rig-core" }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true } 