[package]
name = "meap-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
meap-core = { path = "../../rig-core" }
meap-mongodb = { path = "../../rig-mongodb" }
meap-neo4j = { path = "../../rig-neo4j" }
meap-qdrant = { path = "../../rig-qdrant" }
meap-sqlite = { path = "../../rig-sqlite" }
clap = { version = "4.4", features = ["derive"] }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"
console = "0.15"
dialoguer = "0.11"
indicatif = "0.17" 